tests/expectations/compiler/array/array_concat_fail2.out
Error [ESAZ0374013]: The resulting array length exceeds the maximum allowed length: 512.
    --> compiler-test:3:13
     |
   3 |     let c = a + b;
     |             ^^^^^
